--- a/SelectShapesAddin/SelectShapesAddin.vbproj
+++ b/SelectShapesAddin/SelectShapesAddin.vbproj
@@ -23,7 +23,7 @@
     <PublishUrl>publish\</PublishUrl>
     <InstallUrl />
     <TargetCulture>ru</TargetCulture>
-    <ApplicationVersion>1.0.0.11</ApplicationVersion>
+    <ApplicationVersion>1.0.1.4</ApplicationVersion>
     <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateInterval>7</UpdateInterval>
@@ -134,6 +134,12 @@
   </ItemGroup>
   <ItemGroup>
     <AppDesigner Include="My Project\" />
+    <Compile Include="dlgSaveSelectForm.Designer.vb">
+      <DependentUpon>dlgSaveSelectForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgSaveSelectForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgSelectForm.Designer.vb">
       <DependentUpon>dlgSelectForm.vb</DependentUpon>
     </Compile>
@@ -171,6 +177,9 @@
     <Compile Include="Addin.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="dlgSaveSelectForm.resx">
+      <DependentUpon>dlgSaveSelectForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="dlgSelectForm.resx">
       <DependentUpon>dlgSelectForm.vb</DependentUpon>
     </EmbeddedResource>
